--- a/app/src/main/res/layout/activity_todo_list_manager.xml
+++ b/app/src/main/res/layout/activity_todo_list_manager.xml
@@ -9,21 +9,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".TodoListManagerActivity">
 
-    <EditText android:id="@+id/edit_new_item"
+    <ListView android:id="@+id/lstTodoItems"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/new_item_hint" >
-        <requestFocus />
-    </EditText>
-
-
-    <ListView android:id="@+id/items_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-    </ListView>
-
-
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
