--- a/app/src/main/res/layout/activity_todo_list_manager_list_item.xml
+++ b/app/src/main/res/layout/activity_todo_list_manager_list_item.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/list_todo_item"
+        android:id="@+id/txtTodoTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="20dp"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txtTodoDueDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:textSize="20dp"/>
+
+</RelativeLayout>
