--- a/app/src/main/res/layout/activity_add_new_todo_item.xml
+++ b/app/src/main/res/layout/activity_add_new_todo_item.xml
@@ -39,7 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/edtNewItem"
-        android:calendarViewShown="false" >
+        android:calendarViewShown="false"
+        android:datePickerMode="spinner">
     </DatePicker>
 
     <Button android:id="@+id/btnOK"
